fixed color contrast

--- a/styles/form.css
+++ b/styles/form.css
@@ -71,6 +71,7 @@ textarea {
     font-size: 1rem;
     font-family: "lato";
     background-color: var(--font-color);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 /* Stars container */
@@ -141,6 +142,7 @@ input[type="submit"] {
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 input[type="submit"]:hover {
